2010-12-16  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: timeline records should only operate WebCore time.
        https://bugs.webkit.org/show_bug.cgi?id=51127

        * inspector/InspectorTimelineAgent.cpp:
        (WebCore::InspectorTimelineAgent::didFinishLoadingResource):
        * inspector/TimelineRecordFactory.cpp:
        (WebCore::TimelineRecordFactory::createResourceFinishData):
        * inspector/TimelineRecordFactory.h:

Canonical link: https://commits.webkit.org/64545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74198 268f45cc-cd09-0410-ab3c-d52691b4dbfc