WebCore/inspector/InspectorTimelineAgent.cpp
@@ -244,8 +244,8 @@ void InspectorTimelineAgent::didFinishLoadingResource(unsigned long identifier, 
 {
     pushGCEventRecords();
     // Sometimes network stack can provide for us exact finish loading time. In the other case we will use currentTime.
-    RefPtr<InspectorObject> record = TimelineRecordFactory::createGenericRecord(finishTime ? finishTime * 1000 : WTF::currentTimeMS());
-    record->setObject("data", TimelineRecordFactory::createResourceFinishData(identifier, didFail));
+    RefPtr<InspectorObject> record = TimelineRecordFactory::createGenericRecord(WTF::currentTimeMS());
+    record->setObject("data", TimelineRecordFactory::createResourceFinishData(identifier, didFail, finishTime * 1000));
     record->setNumber("type", ResourceFinishTimelineRecordType);
     setHeapSizeStatistic(record.get());
     m_frontend->addRecordToTimeline(record.release());
